--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,2 +1,12 @@
-<h1>{{appTitle}} 🚀</h1>
-<p>Welcome Ironhacker!</p>
+<h1 class="home-page">{{appTitle}} </h1>
+<form action="">
+  <div class="input-group">
+    <div class="form-outline align-input">
+      <label class="form-label" for="form1">Search:</label>
+      <input id="search-input" type="search" id="form1" class="form-control" placeholder="Search any artist name" />
+    </div>
+    <button id="search-button" type="button" class="btn btn-primary align-button">
+      <img width="15px" height="15px" src="/images/search icon .png" alt="">
+    </button>
+  </div>
+</form>
