--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,6 +1,12 @@
+*{
+  margin: 0;
+  padding: 0;
+}
+
 body {
-  padding: 50px;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+  background: rgb(30, 215, 96);
+  color: white;
 }
 
 a {
@@ -9,4 +15,56 @@ a {
 
 h1 {
   color: 15px;
+}
+
+.navbar-custom{
+  background: rgb(15, 20, 16);
+}
+.nav-link{
+  color: white;
+}
+
+.logo{
+  width: 50px;
+  height: 50px;
+  margin-left: 35vw;
+}
+.navbar-nav{
+  display: flex;
+  margin: 20px;
+
+}
+.home-page{
+  color:  rgb(15, 20, 16);
+  text-align: center;
+  margin-top: 20px;
+
+
+}
+
+.navbar-nav .nav-link:hover {
+  color: rgb(30, 215, 96)
+}
+.align-input {
+  display: flex;
+  align-items: center;
+}
+
+.align-button {
+  display: flex;
+  align-items: center;
+  margin-left: 10px; /* Add some space between the input and button */
+}
+.form-label{
+color: rgb(15, 20, 16);
+font-weight: bold;
+margin-right: 10px;
+font-size: large;
+margin-top: 5px;
+}
+
+.input-group{
+  display: flex;
+  justify-content: center;
+
 }
