--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -1,18 +1,39 @@
 <html lang="en">
 
   <head>
+   <link rel="icon" href="/images/spotify-logo.png" type="image/x-icon">
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>{{appTitle}}</title>
+    <title>Spotify Friends </title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <link rel="stylesheet" href="/stylesheets/style.css" />
+    
   </head>
 
-  <body>
+ <body>
 
+  <nav class="navbar navbar-expand-lg navbar-custom">
+  <div class="container-fluid">
+    <img class="logo" src="../images/spotify-logo.png" alt="">
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+      <div class="navbar-nav">
+        <a class="nav-link" aria-current="page" href="#">Artist Search</a>
+        <a class="nav-link" href="#">Login</a>
+        <a class="nav-link" href="#">Logout</a>
+        <a class="nav-link">Your Profile</a>
+      </div>
+    </div>
+  </div>
+</nav>  
+ 
     {{{body}}}
-
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>     
     <script src="/js/script.js"></script>
+    
   </body>
 
 </html>
