--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,4 +1,6 @@
 <h1 class="home-page">{{appTitle}} </h1>
+<div class="search-bars">
+
 <form action="/" method="get">
   <div class="input-group">
     <div class="form-outline align-input">
@@ -10,4 +12,30 @@
     </button>
   </div>
 </form>
-
+</div>
+<div class="search-bars">
+<form action="/" method="get">
+  <div class="input-group">
+    <div class="form-outline align-input">
+      <label class="form-label" for="form1">Search:</label>
+      <input id="search-input" type="search" id="form1" class="form-control" placeholder="Search any song name" />
+    </div>
+    <button id="search-button" type="button" class="btn btn-primary align-button">
+      <img width="15px" height="15px" src="/images/search icon .png" alt="">
+    </button>
+  </div>
+</form>
+</div>
+<div class="search-bars">
+<form action="/" method="get">
+  <div class="input-group">
+    <div class="form-outline align-input">
+      <label class="form-label" for="form1">Search:</label>
+      <input id="search-input" type="search" id="form1" class="form-control" placeholder="Search any album" />
+    </div>
+    <button id="search-button" type="button" class="btn btn-primary align-button">
+      <img width="15px" height="15px" src="/images/search icon .png" alt="">
+    </button>
+  </div>
+</form>
+</div>
