--- a/views/index.hbs
+++ b/views/index.hbs
@@ -39,3 +39,11 @@
   </div>
 </form>
 </div>
+
+<div class="intro-index">
+
+<h3><ul><li> Search for any artist, album or song name</li></ul></h3>
+<h3><ul><li> Like ❤️ your favourite music</li></ul></h3>
+<h3><ul><li> Comment on artists songs and see what your friends are saying!</li></ul></h3>
+
+</div>
