--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,17 +1,18 @@
 <h1 class="home-page">{{appTitle}} </h1>
 <div class="search-bars">
 
-<form action="/" method="get">
+<form action="/artist" method="GET">
   <div class="input-group">
     <div class="form-outline align-input">
-      <label class="form-label" for="form1">Search:</label>
-      <input id="search-input" type="search" id="form1" class="form-control" placeholder="Search any artist name" />
+      <label class="form-label" for="search-input">Search:</label>
+      <input type="search" id="search-input" name="characters" class="form-control" placeholder="Search any artist name" />
     </div>
     <button id="search-button" type="button" class="btn btn-primary align-button">
       <img width="15px" height="15px" src="/images/search icon .png" alt="">
     </button>
   </div>
 </form>
+
 </div>
 <div class="search-bars">
 <form action="/" method="get">
