basic routes done

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -15,11 +15,11 @@
 
 </div>
 <div class="search-bars">
-<form action="/" method="get">
+<form action="/album" method="GET">
   <div class="input-group">
     <div class="form-outline align-input">
       <label class="form-label" for="form1">Search:</label>
-      <input id="search-input" type="search" id="form1" class="form-control" placeholder="Search any song name" />
+      <input id="search-input" type="search" name="characters" id="form1" class="form-control" placeholder="Search any album name" />
     </div>
     <button id="search-button" type="button" class="btn btn-primary align-button">
       <img width="15px" height="15px" src="/images/search icon .png" alt="">
@@ -28,11 +28,11 @@
 </form>
 </div>
 <div class="search-bars">
-<form action="/" method="get">
+<form action="/song" method="GET">
   <div class="input-group">
     <div class="form-outline align-input">
       <label class="form-label" for="form1">Search:</label>
-      <input id="search-input" type="search" id="form1" class="form-control" placeholder="Search any album" />
+      <input id="search-input" type="search" id="form1" name="characters" class="form-control" placeholder="Search any album" />
     </div>
     <button id="search-button" type="button" class="btn btn-primary align-button">
       <img width="15px" height="15px" src="/images/search icon .png" alt="">
