--- a/views/index.hbs
+++ b/views/index.hbs
@@ -5,9 +5,9 @@
   <div class="input-group">
     <div class="form-outline align-input">
       <label class="form-label" for="search-input">Search:</label>
-      <input type="search" id="search-input" name="characters" class="form-control" placeholder="Search any artist name" />
+      <input type="text" id="search-input" name="characters" class="form-control" placeholder="Search any artist" />
     </div>
-    <button id="search-button" type="button" class="btn btn-primary align-button">
+    <button id="search-button" type="submit" class="btn btn-primary align-button">
       <img width="15px" height="15px" src="/images/search icon .png" alt="">
     </button>
   </div>
@@ -19,9 +19,9 @@
   <div class="input-group">
     <div class="form-outline align-input">
       <label class="form-label" for="form1">Search:</label>
-      <input id="search-input" type="search" name="characters" id="form1" class="form-control" placeholder="Search any album name" />
+      <input id="search-input" type="text" name="characters" id="form1" class="form-control" placeholder="Search any album" />
     </div>
-    <button id="search-button" type="button" class="btn btn-primary align-button">
+    <button id="search-button" type="submit" class="btn btn-primary align-button">
       <img width="15px" height="15px" src="/images/search icon .png" alt="">
     </button>
   </div>
@@ -32,9 +32,9 @@
   <div class="input-group">
     <div class="form-outline align-input">
       <label class="form-label" for="form1">Search:</label>
-      <input id="search-input" type="search" id="form1" name="characters" class="form-control" placeholder="Search any album" />
+      <input id="search-input" type="text" id="form1" name="characters" class="form-control" placeholder="Search any song" />
     </div>
-    <button id="search-button" type="button" class="btn btn-primary align-button">
+    <button id="search-button" type="submit" class="btn btn-primary align-button">
       <img width="15px" height="15px" src="/images/search icon .png" alt="">
     </button>
   </div>
