--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -79,3 +79,38 @@ margin-top: 5px;
   margin-top: 100px;
   margin-left: 10px;
 }
+.sign-up-message{
+  margin-top: 30px;
+}
+#login-form{
+  display: flex;
+  justify-content: center;
+  text-align: center;
+  margin-top: 50px;
+
+
+}
+.login{
+  display: flex;
+  justify-content: center;
+  margin-top: 200px;
+  padding-bottom: 0;
+}
+.box-input{
+  outline: 2px solid gray;
+  font-weight: bold;
+  color: white;
+
+
+}
+
+.login-button-div{
+  display: flex;
+  justify-content: center;
+  width: inherit;
+  margin-top: 20px;
+  
+  
+
+
+}
