--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -21,10 +21,10 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
       <div class="navbar-nav">
-        <a class="nav-link" aria-current="page" href="#">Artist Search</a>
-        <a class="nav-link" href="#">Login</a>
-        <a class="nav-link" href="#">Logout</a>
-        <a class="nav-link">Your Profile</a>
+        <a class="nav-link" aria-current="page" href="/">Search</a>
+        <a class="nav-link" href="/auth/login">Login</a>
+        <a class="nav-link" href="/auth/logout">Logout</a>
+        <a class="nav-link" href="/auth/signup">Sign Up</a>
       </div>
     </div>
   </div>
