--- a/views/artists/album-search.hbs
+++ b/views/artists/album-search.hbs
@@ -4,5 +4,5 @@
   <p>Total Album Tracks: {{this.total_tracks}}</p>
   <p>By: {{this.artists.0.name}}</p>
 
-  <a href="/albums/{{this.id}}">View Songs</a>
+  <a href="/album-tracks/{{id}}">View Songs</a>
 {{/each}}
