--- a/views/artists/albums.hbs
+++ b/views/artists/albums.hbs
@@ -1,5 +1,5 @@
 {{#each result}}
   <h1>{{name}}</h1>
-  <img src={{images.0.url}} alt="" />
-  <a href="/album-tracks/{{id}}">View Tracks</a>
+  <img class="images-songs" src={{images.0.url}} alt="" />
+  <a href="/album-tracks/{{this.id}}">View Tracks</a>
 {{/each}}
