--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -22,9 +22,13 @@
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
       <div class="navbar-nav">
         <a class="nav-link" aria-current="page" href="/">Search</a>
-        <a class="nav-link" href="/auth/login">Login</a>
+        {{#if logged}}
+        <a class="nav-link" href="/auth/profile">Your Profile</a>
         <a class="nav-link" href="/auth/logout">Logout</a>
+        {{else}}
+        <a class="nav-link" href="/auth/login">Login</a>
         <a class="nav-link" href="/auth/signup">Sign Up</a>
+        {{/if}}
       </div>
     </div>
   </div>
