--- a/views/auth/login.hbs
+++ b/views/auth/login.hbs
@@ -16,7 +16,7 @@
     <div class="login-button-div"><button type="submit" class="btn btn-primary">Log In</button></div>
   
 
-    <p class="sign-up-message">Don't have an account? <a href="/auth/signup">Sign Up Here:</a></p>
+    <p class="sign-up-message">Don't have an account? <a href="/auth/signup">Sign Up</a></p>
     {{#if errorMessage}}
       <p class="error">{{errorMessage}}</p>
     {{/if}}
