--- a/views/index.hbs
+++ b/views/index.hbs
@@ -46,5 +46,6 @@
 <h3><ul><li> Search for any artist, album or song name</li></ul></h3>
 <h3><ul><li> Like ❤️ your favourite music</li></ul></h3>
 <h3><ul><li> Comment on artists songs and see what your friends are saying!</li></ul></h3>
+<a href="/artists/create">Create an artist!</a>
 
 </div>
