--- a/views/artists/album-tracks.hbs
+++ b/views/artists/album-tracks.hbs
@@ -1,4 +1,4 @@
-{{#each result}}
+{{!-- {{#each result}}
 	<figure>
 		<figcaption>{{this.name}}</figcaption>
 		{{#if this.preview_url}}
@@ -9,4 +9,18 @@
 	</figure>
         <img class="images-songs" src="{{this.album.images.0.url}}" alt="">
 
-{{/each}}
+{{/each}} --}}
+
+<div class="grid-container">
+  {{#each result}}
+  <figure class="images-songs">
+    <figcaption>{{this.name}}</figcaption>
+    {{#if this.preview_url}}
+    <audio controls src="{{this.preview_url}}"><a href="{{this.href}}">Play Audio</a></audio>
+    {{else}}
+    <p>No preview available</p>
+    {{/if}}
+  </figure>
+  <img class="images-songs" src="{{this.album.images.0.url}}" alt="">
+  {{/each}}
+</div>
