--- a/views/artists/artist-create.hbs
+++ b/views/artists/artist-create.hbs
@@ -4,5 +4,16 @@
     <label>Description:<textarea type="text" name="description" cols="30" rows="4"></textarea></label>
     <label>Image:<input type="text" name="images"></label>
 
+
+  
+
     <button type="submit">Create</button>
 </form>
+
+
+
+
+{{!-- <form action="/edit-profile" method="post" enctype="multipart/form-data">
+      <label>Image:<input type="file" name="imageUrl"></label>
+      <button type="submit">Edit</button>
+</form> --}}
