--- a/views/auth/profile.hbs
+++ b/views/auth/profile.hbs
@@ -20,7 +20,10 @@
               <div class="p-4" style="background-color: #f8f9fa;">
                 <p class="font-italic mb-1">Web Developer</p>
                 <p class="font-italic mb-1">Lives in New York</p>
-                <p class="font-italic mb-0">Photographer</p>
+                <p class="font-italic mb-0">{{myUser.username}}</p>
+                {{#each myUser.favourites}}
+<p>{{this.name}}</p>
+                {{/each}}
               </div>
             </div>
             <div class="d-flex justify-content-between align-items-center mb-4">
