--- a/views/artists/artist-create.hbs
+++ b/views/artists/artist-create.hbs
@@ -1,13 +1,13 @@
-<form action="/artists/create" method="post">
-    <label>Name:<input type="text" name="name"/></label>
-    <label>Genre:<input type="text" name="genres"/></label>
-    <label>Description:<textarea type="text" name="description" cols="30" rows="4"></textarea></label>
-    <label>Image:<input type="text" name="images"></label>
+<form action="/artists/create" method="post" class="form-create-artist">
+    <label class="labels-form-create">Name:<input type="text" name="name"/></label>
+    <label class="labels-form-create">Genre:<input type="text" name="genres"/></label>
+    <label class="labels-form-create">Description:<textarea type="text" name="description" cols="30" rows="4"></textarea></label>
+    <label class="labels-form-create">Image URL:<input type="text" name="images"></label>
 
 
   
 
-    <button type="submit">Create</button>
+    <button type="submit" class="btn btn-primary">Create</button>
 </form>
 
 
