--- a/views/artists/album-tracks.hbs
+++ b/views/artists/album-tracks.hbs
@@ -14,11 +14,11 @@
 <div class="grid-container">
   {{#each result}}
   <figure class="images-songs">
-    <figcaption>{{this.name}}</figcaption>
+    <figcaption class="name-of-song"><strong>{{this.name}}</strong></figcaption>
     {{#if this.preview_url}}
     <audio controls src="{{this.preview_url}}"><a href="{{this.href}}">Play Audio</a></audio>
     {{else}}
-    <p>No preview available</p>
+    <p><strong> No Preview available </strong></p>
     {{/if}}
   </figure>
   <img class="images-songs" src="{{this.album.images.0.url}}" alt="">
