--- a/views/artists/song-search.hbs
+++ b/views/artists/song-search.hbs
@@ -1,9 +1,49 @@
+<style>
+  /* Grid container */
+  .grid-container {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+    gap: 20px;
+    align-items: center; /* Center align items vertically */
+  }
 
-{{#each result}}
-	<figure>
-		<figcaption>Listen to {{this.name}} by {{this.artists.0.name}}</figcaption>
-		<audio controls src="{{this.preview_url}}"><a href="{{this.href}}">Play Audio</a></audio>
-	</figure>
-           <img class="images-songs" src="{{this.album.images.0.url}}" alt="">
-		   
-{{/each}}
+  /* Grid item */
+  .grid-item {
+    background-color: inherit;
+    padding: 20px;
+    text-align: center;
+    color: black;
+  }
+
+  /* Image styles */
+  .grid-item img.images-songs {
+    width: 100%;
+    height: auto;
+    max-height: 200px;
+    object-fit: cover;
+    border-radius: 5px;
+  }
+
+  /* Caption styles */
+  .grid-item figcaption {
+    font-weight: bold;
+    margin-bottom: 10px;
+  }
+
+  /* Audio player styles */
+  .grid-item audio {
+    width: 100%;
+  }
+</style>
+
+<div class="grid-container">
+  {{#each result}}
+  <div class="grid-item">
+    <figure>
+      <figcaption>Listen to {{this.name}} by {{this.artists.0.name}}</figcaption>
+      <audio controls src="{{this.preview_url}}"></audio>
+    </figure>
+    <img class="images-songs" src="{{this.album.images.0.url}}" alt="">
+  </div>
+  {{/each}}
+</div>
