--- a/views/artists/artist-edit.hbs
+++ b/views/artists/artist-edit.hbs
@@ -2,7 +2,7 @@
 
 <form action="/artists/{{artist._id}}/edit" method="post">
 <label>Name:
-    <input type="text" name="title" value="{{artist.name}}"/>
+    <input type="text" name="name" value="{{artist.name}}"/>
     </label>
 <label>Genre:
     <input type="text" name="genres" value="{{artist.genres}}"/>
