--- a/views/artists/artist-search.hbs
+++ b/views/artists/artist-search.hbs
@@ -11,7 +11,7 @@
 	</div>
 	<div class="added-to-favourites">
 	  <form action="/favorites-delete/{{this.name}}" method="post">
-      <button type="submit">Delete from Favorites</button>
+      <button type="submit" class="btn btn-danger">Delete from Favorites</button>
 	  </div>
     </form>
     {{else}}
