--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -236,4 +236,46 @@ margin-top: 5px;
 
 
 }
-  
+.created-artists {
+  position: relative;
+  font-size: 32px;
+  font-weight: bold;
+  color: black;
+  text-align: center;
+  margin: 20px 0px;
+}
+
+.created-artists::before {
+  content: attr(data-text);
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  opacity: 0;
+  transition: opacity 0.3s ease;
+}
+
+.created-artists:hover::before {
+  opacity: 1;
+}
+
+.created-artists::after {
+  content: "";
+  position: absolute;
+  bottom: -5px;
+  left: 0;
+  width: 100%;
+  height: 2px;
+  background-color: #333;
+  transform: scaleX(0);
+  transition: transform 0.3s ease;
+}
+
+.created-artists:hover::after {
+  transform: scaleX(1);
+}
+
+.buttons-create-artists{
+  margin: 10px 0px;
+
+}
