--- a/views/auth/profile.hbs
+++ b/views/auth/profile.hbs
@@ -5,7 +5,7 @@
         <div class="card">
           <div class="rounded-top text-white d-flex flex-row" style="background-color: #000; height:200px;">
             <div class="ms-4 mt-5 d-flex flex-column" style="width: 150px;">
-              <img src="/images/randomUser.jpg"
+              <img src="{{myUser.profilePic}}"
                 alt="Generic placeholder image" class="img-fluid img-thumbnail mt-4 mb-2"
                 style="width: 150px; z-index: 1">
               
@@ -18,10 +18,10 @@
             
               </div>
               <div class="edit-button">
-              <button type="button" class="btn btn-outline-dark" data-mdb-ripple-color="dark"
+              <a href="/auth/profile/edit" class="btn btn-outline-dark" data-mdb-ripple-color="dark"
                 style="z-index: 1;">
                 Edit profile
-              </button>
+             </a>
               </div>
               <div class="see-your-created-artists">
                 <a href="/artists">See Your Created Artists</a>
