--- a/views/auth/profile.hbs
+++ b/views/auth/profile.hbs
@@ -1,49 +1,95 @@
 <section class="h-100 gradient-custom-2">
-  <div class="container py-5 h-100">
-    <div class="row d-flex justify-content-center align-items-center h-100">
-      <div class="col col-lg-9 col-xl-7">
-        <div class="card">
-          <div class="rounded-top text-white d-flex flex-row" style="background-color: #000; height:200px;">
-            <div class="ms-4 mt-5 d-flex flex-column" style="width: 150px;">
-              <img src="/images/randomUser.jpg"
-                alt="Generic placeholder image" class="img-fluid img-thumbnail mt-4 mb-2"
-                style="width: 150px; z-index: 1">
-              
-            </div>
-            </div>
-          <div class="card-body p-4 text-black">
-            <div class="mb-5">
-              <h2 class="font-italic mb-0">@{{myUser.username}}</h2>
-              <div class="edit-button">
-              <button type="button" class="btn btn-outline-dark" data-mdb-ripple-color="dark"
-                style="z-index: 1;">
-                Edit profile
-              </button>
-              </div>
-              <div>
-                <h5>User Details:</h5>
-                <p><span><strong>Email:</strong></span><br>{{myUser.email}}</p>
-                <p><span><strong>Account Created:</strong><br></span>{{myUser.createdAt}}</p>
+	<div class="container py-5 h-100">
+		<div class="row d-flex justify-content-center align-items-center h-100">
+			<div class="col col-lg-9 col-xl-7">
+				<div class="card">
+					<div
+						class="rounded-top text-white d-flex flex-row"
+						style="background-color: #000; height:200px;"
+					>
+						<div
+							class="ms-4 mt-5 d-flex flex-column"
+							style="width: 150px;"
+						>
+							<img
+								src="/images/randomUser.jpg"
+								alt="Generic placeholder image"
+								class="img-fluid img-thumbnail mt-4 mb-2"
+								style="width: 150px; z-index: 1"
+							/>
 
-              </div>
- <div class="favorite-artists-grid p-4" style="background-color: #f8f9fa;">
-  <h4 class="favorite-artists-heading">Your Favorite Artists</h4>
-  {{#each myUser.favourites}}
-  <div class="favorite-artist">
-    <p><strong>{{this.name}}</strong></p>
-     <p><span class="artist-genre">Genre:</span> {{this.genres}}</p>
-    <img class="artist-image" src="{{this.images}}" alt="">
-  </div>
-  {{/each}}
-</div>
+						</div>
+					</div>
+					<div class="card-body p-4 text-black">
+						<div class="mb-5">
+							<h2 class="font-italic mb-0">@{{myUser.username}}</h2>
+							<div class="edit-button">
+								<button
+									type="button"
+									class="btn btn-outline-dark"
+									data-mdb-ripple-color="dark"
+									style="z-index: 1;"
+								>
+									Edit profile
+								</button>
+							</div>
+							<div>
+								<h5>User Details:</h5>
+								<p><span><strong>Email:</strong></span><br
+									/>{{myUser.email}}</p>
+								<p><span><strong>Account Created:</strong><br
+										/></span>{{myUser.createdAt}}</p>
 
+							</div>
+							<div
+								class="favorite-artists-grid p-4"
+								style="background-color: #f8f9fa;"
+							>
+								<h4 class="favorite-artists-heading">Your Favorite
+									Artists</h4>
 
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
+								{{#each myUser.favourites}}
+									<div class="favorite-artist">
+										<p><strong>{{this.name}}</strong></p>
+										<p><span class="artist-genre">Genre:</span>
+											{{this.genres}}</p>
+										<img
+											class="artist-image"
+											src="{{this.images}}"
+											alt=""
+										/>
+
+										{{!-- <form action="/favorites-delete/{{this.name}}" method="post">
+      <button type="submit" class="btn btn-danger">Delete from Favorites</button>
+    </form> --}}
+									</div>
+								{{/each}}
+							</div>
+
+							<div
+								class="favorite-artists-grid p-4"
+								style="background-color: #f8f9fa;"
+							>
+								<h4 class="favorite-artists-heading">Your Favorite
+									Artists</h4>
+
+								{{#each myUser.comments}}
+									<div class="favorite-artist">
+										<p><strong>{{this.spotifyArtist}}</strong></p>
+										<p><strong>{{this.content}}</strong></p>
+										<p><span class="artist-genre">Rating:</span>
+											{{this.rating}}</p>
+										{{!-- <form action="/favorites-delete/{{this.name}}" method="post">
+      <button type="submit" class="btn btn-danger">Delete from Favorites</button>
+    </form> --}}
+									</div>
+								{{/each}}
+							</div>
+
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
 </section>
-
-
