--- a/views/auth/profile.hbs
+++ b/views/auth/profile.hbs
@@ -12,7 +12,7 @@
 							style="width: 150px;"
 						>
 							<img
-								src="/images/randomUser.jpg"
+								src="{{myUser.profilePic}}"
 								alt="Generic placeholder image"
 								class="img-fluid img-thumbnail mt-4 mb-2"
 								style="width: 150px; z-index: 1"
@@ -24,15 +24,10 @@
 						<div class="mb-5">
 							<h2 class="font-italic mb-0">@{{myUser.username}}</h2>
 							<div class="edit-button">
-								<button
-									type="button"
-									class="btn btn-outline-dark"
-									data-mdb-ripple-color="dark"
-									style="z-index: 1;"
-								>
-									Edit profile
-								</button>
-							</div>
+								 <a href="/auth/profile/edit" class="btn btn-outline-dark" data-mdb-ripple-color="dark"
+                style="z-index: 1;">
+                Edit profile
+             </a>
 							<div>
 								<h5>User Details:</h5>
 								<p><span><strong>Email:</strong></span><br
